# src/controllers/property.ts
@@ -1,5 +1,6 @@
 import MongoDbConnection from "../lib/mongo";
 import PropertyService from "../services/property.service";
+
 module.exports.testController = async (req: any, res: any) => {
   try {
     res.send({ msg: "test" });
@@ -7,23 +8,16 @@ module.exports.testController = async (req: any, res: any) => {
 };
 
 module.exports.addProperty = async (req: any, res: any) => {
-  try {
-    const result = await PropertyService.addProperty(req.body);
-    res.send(result);
-  } catch (error) {
-    console.log(error)
-  }
+  const result = await PropertyService.addProperty(req, res);
 };
-module.exports.getProperty = async (req:any,res:any) => {
-  try {
-    const properties: any[] = await PropertyService.getProperties();
-    console.log("controller");
-    console.log(properties)
-    res.json({properties:properties, "message":"properties list"})
-  } catch (error) {
-    
-  }
-}
+module.exports.getProperty = async (req: any, res: any) => {
+  const properties = await PropertyService.getProperties(req, res);
+};
+module.exports.getPropertyById = async (req: any, res: any) => {
+  let propertyId = req.swagger.params.propertyId.value;
+  const getPropertybyid = await PropertyService.getPropertyById(req, res);
+};
 
-
-
+module.exports.deletePropertyById = async (req: any, res: any) => {
+  const deletePropertyById = await PropertyService.deletePropertyById(req, res);
+};
